--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background:  linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1)), url('https://wallpapercave.com/wp/twzB0fS.jpg') no-repeat center center/cover ;
+  background:  linear-gradient(rgba(241, 240, 240, 0.4), rgba(241, 241, 241, 0.4)), url('https://wallpapercave.com/wp/twzB0fS.jpg') no-repeat center center/cover ;
   height: 150vh;
   color: #fff;
   font-family: Arial, Helvetica, sans-serif;
